# lcars

./: .gitattributes  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  config.example.toml  docker-compose.dev.yml  docker-compose.yml  flake.nix  package.json
.claude/agents/: api-integration.md  code-reviewer.md  database-migration.md  indexer-parser.md  nextjs-frontend.md  rust-backend.md  storage-processor.md  test-runner.md  torrent-engine.md
.github/workflows/: ci.yml  release.yml
.moon/: toolchain.yml  workspace.yml
apps/backend/: Cargo.toml  Dockerfile  config.toml  moon.yml
apps/backend/data/: lcars.db-shm
apps/backend/src/: config.rs  error.rs  lib.rs  main.rs
apps/backend/src/api/: auth.rs  downloads.rs  mod.rs  movies.rs  music.rs  search.rs  soulseek.rs  system.rs  templates.rs  tv.rs  users.rs
apps/backend/src/db/: mod.rs  models.rs  queries.rs
apps/backend/src/db/migrations/: V001__initial.sql  V002__add_music_tables.sql  V003__add_performance_indexes.sql
apps/backend/src/services/: activity.rs  auth.rs  mod.rs  musicbrainz.rs  scheduler.rs  torrent.rs
apps/backend/src/services/indexer/: mod.rs  parser.rs
apps/backend/src/services/indexer/providers/: eztv.rs  leetx.rs  mod.rs  rutracker.rs  yts.rs
apps/backend/src/services/soulseek/: engine.rs  events.rs  listener.rs  mod.rs  peer.rs  shares.rs  types.rs
apps/backend/src/services/storage/: local.rs  mod.rs  naming.rs
apps/backend/src/views/: downloads.rs  mod.rs  music.rs  settings.rs
apps/backend/static/css/: lcars.css
apps/backend/static/js/: app.js
apps/backend/templates/components/: frame.html
apps/backend/templates/pages/: 404.html  album_detail.html  artists.html  dashboard.html  downloads.html  tv_detail.html  tv_list.html
apps/backend/templates/partials/: album_releases.html  download_progress.html  movies_grid.html  status_cards.html  tmdb_search_results.html
apps/backend/tests/: movies_test.rs  music_tests.rs  soulseek_tests.rs  users_tests.rs
apps/backend/tests/common/: mod.rs
apps/frontend/: Dockerfile  moon.yml  next.config.js  package.json  postcss.config.js  tailwind.config.js  tsconfig.tsbuildinfo
apps/frontend/src/app/: globals.css  layout.tsx  page.tsx
apps/frontend/src/components/: artist-card.tsx  download-item.tsx  index.ts  media-card.tsx  media-grid.tsx  search-modal.tsx  track-list.tsx
apps/frontend/src/lib/: api.ts  constants.ts  providers.tsx  types.ts  utils.ts
apps/lcars/: .gitignore  Cargo.toml  Dockerfile  moon.yml
apps/lcars/data/: lcars.db-shm  lcars.db-wal
apps/lcars/src/: config.rs  error.rs  lib.rs  main.rs  response.rs  static_files.rs
apps/lcars/src/api/: mod.rs  movies.rs  music.rs  search.rs  soulseek.rs  system.rs  tv.rs  vpn.rs  ws.rs
apps/lcars/src/db/: models.rs
apps/lcars/src/db/migrations/: V001__initial.sql  V004__multi_source_downloads.sql
apps/lcars/src/middleware/: auth.rs  mod.rs
apps/lcars/src/services/: dns.rs  mod.rs  musicbrainz.rs  tmdb.rs  torrent.rs  wireguard.rs
apps/lcars/src/services/indexer/providers/: eztv.rs  leetx.rs
apps/lcars/src/services/soulseek/: connection.rs  engine.rs  types.rs  uploads.rs
apps/lcars/src/views/: auth.rs  dashboard.rs  downloads.rs  mod.rs  movies.rs  music.rs  settings.rs  sse.rs  tv.rs  utils.rs
apps/lcars/static/css/: lcars.css
apps/lcars/static/js/: app.js
apps/lcars/templates/: base.html  login.html
apps/lcars/templates/components/: download_item.html  search_modal.html  sidebar.html
apps/lcars/templates/pages/: artist_detail.html  dashboard.html  downloads.html  movie_detail.html  movies_list.html  settings.html  tv_detail.html  tv_list.html
apps/lcars/templates/partials/: movies_content.html  musicbrainz_search_results.html  releases_list.html  search_results.html  tv_content.html  tv_grid.html  vpn_status.html
apps/lcars/tests/: README.md  auth_tests.rs  tv_tests.rs
apps/lcars/tests/common/: mod.rs
docs/: API.md  CONFIGURATION.md  TROUBLESHOOTING.md
docs/architecture/: WIREGUARD_VPN.md
(+29 files in other folders)
