[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[lib]
name = "backend"
path = "src/lib.rs"

[[bin]]
name = "backend"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.31", features = ["bundled"] }
refinery = { version = "0.8", features = ["rusqlite"] }
config = "0.14"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
argon2 = "0.5"
jsonwebtoken = "9.0"
rand = "0.8"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
async-trait = "0.1"
scraper = "0.18"
regex = "1.10"
lazy_static = "1.4"
futures = "0.3"
sha2 = "0.10"
hex = "0.4"
urlencoding = "2.1"
librqbit = { version = "8.0", default-features = false, features = ["rust-tls"] }
tokio-cron-scheduler = "0.13"
tower-http = { version = "0.5", features = ["cors"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3.10"
axum-test = "16"
tokio-test = "0.4"
tower = { version = "0.4", features = ["util"] }
