[package]
name = "lcars"
version = "0.1.0"
edition = "2021"

[lib]
name = "lcars"
path = "src/lib.rs"

[[bin]]
name = "lcars"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.31", features = ["bundled"] }
refinery = { version = "0.8", features = ["rusqlite"] }
config = "0.14"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
argon2 = "0.5"
jsonwebtoken = "9.0"
rand = "0.8"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
async-trait = "0.1"
scraper = "0.18"
regex = "1.10"
lazy_static = "1.4"
futures = "0.3"
sha2 = "0.10"
hex = "0.4"
urlencoding = "2.1"
librqbit = { version = "8.0", default-features = false, features = ["rust-tls"] }
tokio-cron-scheduler = "0.13"
tower-http = { version = "0.5", features = ["cors"] }
soulseek-protocol = { path = "../../packages/soulseek-protocol" }
bytes = "1.5"
uuid = { version = "1.19.0", features = ["v4"] }
lofty = "0.22"
walkdir = "2.5"
chrono = { version = "0.4", features = ["serde"] }

# HTMX frontend
askama = { version = "0.12", features = ["with-axum"] }
askama_axum = "0.4"
rust-embed = { version = "8.5", features = ["compression"] }
async-stream = "0.3"
tokio-stream = "0.1"
axum-extra = { version = "0.9", features = ["cookie", "form"] }
mime_guess = "2.0"
anyhow = "1.0"
time = "0.3"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3.10"
axum-test = "16"
tokio-test = "0.4"
tower = { version = "0.4", features = ["util"] }
